# secrux

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  Dockerfile.trivy  README.md  README.zh-CN.md  build-local-engines.sh  config.go  config.temp  docker-compose.yml  gateway.crt  gateway.key  loops.go  main.go  metrics.go  task_trivy.go  types.go
apps/ai/samples/mcps/file_reader/: README.md  pyproject.toml
apps/ai/samples/mcps/file_reader/file_reader/: __init__.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  README.md  README.zh-CN.md  RESOURCE_CONFIGURATION.md  RESOURCE_CONFIGURATION.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECRUX_INTEGRATION.md  SECRUX_INTEGRATION.zh-CN.md  STARTUP.md  STARTUP.zh-CN.md  TECH_SELECTION.zh-CN.md  integration.md  sink-catalog.example.json
samples/mcps/sarif_rules/: README.md  pyproject.toml
samples/mcps/sarif_rules/sarif_rules/: __init__.py
scripts/: compose-up.sh  gen-executor-gateway-certs.sh
secrux-ai/: README.md  pyproject.toml
secrux-ai/samples/mcps/file_reader/file_reader/: server.py
secrux-ai/secrux_ai/: callbacks.py
secrux-ai/secrux_ai/scripts/: __init__.py
secrux-ai/service/builtin/: file_reader.py  sarif_rules.py
secrux-engine/: .env.example  README.zh-CN.md  run-trivy.sh
secrux-executor/: README.md  README.zh-CN.md  docker.go  go.mod  source.go  task_trivy.go  trivy_pom_sanitize.go
secrux-intellij-plugin/: README.md
secrux-web/: .env.example  README.md  README.zh-CN.md
secrux_ai/: models.py
src/: App.tsx  index.css  (+1 more)
(+287 files in other folders)
