[project]
name = "secrux-ai"
version = "0.1.0"
description = "AI stage-inspection service for Secrux workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "httpx>=0.27.2",
    "rich>=13.7.1",
    "pyyaml>=6.0.2",
    "fastapi>=0.115.5",
    "uvicorn>=0.30.6",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.1",
    "python-multipart>=0.0.9",
    "tree_sitter_languages>=1.10.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["secrux_ai*", "service*"]
exclude = ["samples*", "docs*"]

[tool.uv]
package = true
